# dice-py

./: .gitignore  README.md  pyproject.toml  setup.py
dicepy/: api.py  dice.py
flask_api/: __init__.py  routes.py
pydice/: __init__.py
